[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rag-anything"
version = "0.1.0"
description = "A multimodal RAG system that can handle any type of document"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [
    { name = "RAG-Anything Contributors" },
]
keywords = ["rag", "multimodal", "llm", "document-parsing", "retrieval-augmented-generation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "lightrag-hku>=1.0.0",
    "openai>=1.0.0",
    "numpy>=1.24.0",
    "aiohttp>=3.9.0",
    "aiofiles>=23.0.0",
    "pydantic>=2.0.0",
    "tenacity>=8.0.0",
    "python-dotenv>=1.0.0",
    "tiktoken>=0.5.0",
    "Pillow>=10.0.0",
    "pypdf>=4.0.0",
    "python-docx>=1.1.0",
    "python-pptx>=0.6.23",
    "pandas>=2.0.0",
    "openpyxl>=3.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.0.0",
    "black>=24.0.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
]
ocr = [
    "paddlepaddle>=2.6.0",
    "paddleocr>=2.7.0",
]
audio = [
    "openai-whisper>=20231117",
]
video = [
    "opencv-python>=4.9.0",
    "moviepy>=1.0.3",
]
all = [
    "rag-anything[ocr,audio,video]",
]

[project.urls]
Homepage = "https://github.com/HKUDS/RAG-Anything"
Repository = "https://github.com/HKUDS/RAG-Anything"
Issues = "https://github.com/HKUDS/RAG-Anything/issues"

[tool.hatch.build.targets.wheel]
packages = ["raganything"]

[tool.black]
line-length = 88
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
